click to toggle reply box

--- a/qanda/qanda_app/static/qanda/css/qanda.css
+++ b/qanda/qanda_app/static/qanda/css/qanda.css
@@ -143,11 +143,11 @@
 }
 
 .reply-box {
-	display: none;
+	display: block;
 }
 
 .answer:hover .reply-box {
-	display: block;
+	/*display: block;*/
 }
 
 .profile-summary {
