displaydisplay usernames instead of name and surname in listing

--- a/qanda/qanda_app/templates/qanda/question_listing_base.html
+++ b/qanda/qanda_app/templates/qanda/question_listing_base.html
@@ -29,7 +29,7 @@
 							</span>
 						{% endif %}
 						<span class="questioninfo pull-right">
-							<a class="questioninfo pull-right" href="{{ question.author.get_absolute_url }}">{{ question.postDate }} {% trans "by" %} {{ question.author }} </a>
+							<a class="questioninfo pull-right" href="{{ question.author.get_absolute_url }}">{{ question.postDate }} {% trans "by" %} {{ question.author.djangoUser }} </a>
 						</span>
 					</div>	
 				</a>
