--- a/qanda/qanda_app/templates/search/search.html
+++ b/qanda/qanda_app/templates/search/search.html
@@ -1,40 +1,46 @@
-{% extends 'qanda_base.html' %}
+{% extends 'qanda/qanda_base.html' %}
 
 {% block body %}
 
-    <h2>Search</h2>
+    <div class="container">
+        
+        {% include "qanda/navbar.html" %}
 
-    <form method="get" action=".">
-        <table>
-            {{ form.as_table }}
-            <tr>
-                <td>&nbsp;</td>
-                <td>
-                    <input class="btn" type="submit" value="Search">
-                </td>
-            </tr>
-        </table>
+        <h2>Search</h2>
 
-        {% if query %}
-            <h3>Results</h3>
+        <form method="get" action=".">
+            <table>
+                {{ form.as_table }}
+                <tr>
+                    <td>&nbsp;</td>
+                    <td>
+                        <input class="btn" type="submit" value="Search">
+                    </td>
+                </tr>
+            </table>
 
-            {% for result in page.object_list %}
-                <p>
-                    <a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a>
-                </p>
-            {% empty %}
-                <p>No results found.</p>
-            {% endfor %}
+            {% if query %}
+                <h3>Results</h3>
 
-            {% if page.has_previous or page.has_next %}
-                <div>
-                    {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
-                    |
-                    {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
-                </div>
+                {% for result in page.object_list %}
+                    <p>
+                        <a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a>
+                    </p>
+                {% empty %}
+                    <p>No results found.</p>
+                {% endfor %}
+
+                {% if page.has_previous or page.has_next %}
+                    <div>
+                        {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
+                        |
+                        {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
+                    </div>
+                {% endif %}
+            {% else %}
+                {# Show some example queries to run, maybe query syntax, something else? #}
             {% endif %}
-        {% else %}
-            {# Show some example queries to run, maybe query syntax, something else? #}
-        {% endif %}
-    </form>
+        </form>
+
+    </div>
 {% endblock %}
