display stars row in profile page again

--- a/qanda/qanda_app/static/qanda/css/qanda.css
+++ b/qanda/qanda_app/static/qanda/css/qanda.css
@@ -259,8 +259,32 @@
 	display: none;
 }
 
+.question-title-row {
+
+}
+
+.question-upvotes-row {
+
+}
+
+.question-downvotes-row {
+
+}
+
+.answer-title-row {
+	
+}
+
+.answer-upvotes-row {
+
+}
+
+.answer-downvotes-row {
+
+}
+
 .question-stars-row {
-	display: none;
+	/*display: none;*/
 }
 
 .question-flags-row {
