add answers title

--- a/qanda/qanda_app/templates/qanda/question.html
+++ b/qanda/qanda_app/templates/qanda/question.html
@@ -115,6 +115,7 @@
 				</div> -->
 				<hr>
 
+				<h3>{% trans "Answers" %}</h3>
 				{% for answer in answers %}
 				<div class ="row answer">
 					<div class="span9">
