display number of answers

--- a/qanda/qanda_app/templates/qanda/question.html
+++ b/qanda/qanda_app/templates/qanda/question.html
@@ -116,6 +116,7 @@
 				<hr>
 
 				<h3>{% trans "Answers" %}</h3>
+				<h6> {% blocktrans count counter=answers|length %} There is one answer. {% plural %} There are {{ counter }} answers. {% endblocktrans %} </h6>
 				{% for answer in answers %}
 				<div class ="row answer">
 					<div class="span9">
